--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,15 +7,16 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+gdk-pixbuf-sys = "0.16.3"
 
 [dependencies.gtk]
-version = "0.15.5"
-# features = ["v3_16"]
+version = "0.16.0"
 
 [dependencies.gio]
-version = "0.15.12"
-# features = ["v2_44"]
+version = "0.16.0"
 
 [dependencies.glib]
-version = "0.15.2"
-# features = ["v2_60"]
+version = "0.16.1"
+
+[dependencies.gdk-pixbuf]
+version = "0.16.7"
